--- a/src/book/BookRows.module.scss
+++ b/src/book/BookRows.module.scss
@@ -1,10 +1,24 @@
 .BookRows {
-  display: flex;
+  display: inline-flex;
+  background-color: #1a4452;
+
+  &.pending {
+    opacity: 0.8;
+  }
 }
 
 .bookSide {
   min-width: 480px;
   margin: 0 2px;
+  color: #f8f4ea;
+}
+
+.header {
+  background-color: #579bb1;
+}
+
+.bookRow {
+  font-size: 14px;
 }
 
 .header,
